<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_fragment"
    android:layout_gravity="bottom">

    <!-- 触屏拍摄 -->
    <LinearLayout
        android:id="@+id/layout_touch_take"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_time_lapse"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_touch_take"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_margin="@dimen/dp5"
            android:background="@drawable/ic_camera_setting_more_light"/>
        <TextView
            android:id="@+id/tv_touch_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/popup_text_color"
            android:text="Touch screen shooting"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>

    <!-- 延时拍摄 -->
    <LinearLayout
        android:id="@+id/layout_time_lapse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/layout_touch_take"
        app:layout_constraintEnd_toStartOf="@+id/layout_flash"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_time_lapse"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/ic_camera_setting_more_light"/>
            <TextView
                android:id="@+id/tv_time_lapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/popup_text_color"
                android:text="@string/tv_time_lapse"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- 闪光灯/柔光自拍 -->
    <LinearLayout
        android:id="@+id/layout_flash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/layout_time_lapse"
        app:layout_constraintEnd_toStartOf="@+id/layout_camera_setting"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_flash"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/ic_camera_flash_off"/>
            <TextView
                android:id="@+id/tv_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/popup_text_color"
                android:text="@string/tv_flash"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- 相机设置 -->
    <LinearLayout
        android:id="@+id/layout_camera_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/layout_flash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_camera_setting"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_margin="@dimen/dp5"
            android:background="@drawable/ic_camera_setting"/>
        <TextView
            android:id="@+id/tv_camera_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/popup_text_color"
            android:text="@string/tv_camera_setting"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_luminous_compensation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:layout_marginTop="20dp"
        android:text="@string/tv_luminous_compensation"
        android:textColor="@color/popup_text_color"
        app:layout_constraintStart_toStartOf="@id/layout_touch_take"
        app:layout_constraintTop_toBottomOf="@id/layout_touch_take" />

    <Switch
        android:id="@+id/sw_luminous_compensation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:layout_marginStart="198dp"
        android:layout_marginTop="100dp"
        android:switchMinWidth="@dimen/switch_min_width"
        app:layout_constraintEnd_toEndOf="@id/layout_camera_setting"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@+id/tv_luminous_compensation"
        app:layout_constraintTop_toBottomOf="@id/layout_camera_setting" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:text="@string/tv_edge_blur"
        android:textColor="@color/popup_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sw_edge_blur"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_luminous_compensation"
        app:layout_constraintTop_toBottomOf="@id/tv_luminous_compensation"
        app:layout_constraintVertical_bias="0.317" />

    <Switch
        android:id="@+id/sw_edge_blur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:layout_marginEnd="8dp"
        android:switchMinWidth="@dimen/switch_min_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sw_luminous_compensation"
        app:layout_constraintTop_toBottomOf="@id/sw_luminous_compensation"
        app:layout_constraintVertical_bias="0.609" />

</androidx.constraintlayout.widget.ConstraintLayout>